# aegis-vault

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  THREATMODEL.md  clippy.toml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
crates/aegis-vault/: Cargo.toml  README.md
crates/aegis-vault/src/: crypto.rs  error.rs  format.rs  identity.rs  lib.rs  page.rs
docs/examples/: react-custom.tsx  react-with-widget.tsx  vanilla-headless.html  vanilla.html
docs/integration/: hyprstream-rpc-std.md
scripts/: build-wasm.sh
src/: index.ts  types.ts  webauthn.ts
src/react/: index.ts
src/widget/: index.ts
